parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
file' -> . file [ # ]
## Transitions:
-- On SEMICOLON shift to state 1
-- On list(SEMICOLON) shift to state 3
-- On file shift to state 140
## Reductions:
-- On FUN EOF
--   reduce production list(SEMICOLON) ->

State 1:
## Known stack suffix:
## SEMICOLON
## LR(1) items:
list(SEMICOLON) -> SEMICOLON . list(SEMICOLON) [ VAR VAL TRUE TILD STRING RETURN RBRAC LSPAR LPAR INT IF IDENT FUN FN FALSE EXCLAM EOF ]
## Transitions:
-- On SEMICOLON shift to state 1
-- On list(SEMICOLON) shift to state 2
## Reductions:
-- On VAR VAL TRUE TILD STRING RETURN RBRAC LSPAR LPAR INT IF IDENT FUN FN FALSE EXCLAM EOF
--   reduce production list(SEMICOLON) ->

State 2:
## Known stack suffix:
## SEMICOLON list(SEMICOLON)
## LR(1) items:
list(SEMICOLON) -> SEMICOLON list(SEMICOLON) . [ VAR VAL TRUE TILD STRING RETURN RBRAC LSPAR LPAR INT IF IDENT FUN FN FALSE EXCLAM EOF ]
## Transitions:
## Reductions:
-- On VAR VAL TRUE TILD STRING RETURN RBRAC LSPAR LPAR INT IF IDENT FUN FN FALSE EXCLAM EOF
--   reduce production list(SEMICOLON) -> SEMICOLON list(SEMICOLON)

State 3:
## Known stack suffix:
## list(SEMICOLON)
## LR(1) items:
file -> list(SEMICOLON) . list(__anonymous_0) EOF [ # ]
## Transitions:
-- On FUN shift to state 4
-- On list(__anonymous_0) shift to state 135
-- On decl shift to state 137
## Reductions:
-- On EOF
--   reduce production list(__anonymous_0) ->

State 4:
## Known stack suffix:
## FUN
## LR(1) items:
decl -> FUN . IDENT funbody [ SEMICOLON ]
## Transitions:
-- On IDENT shift to state 5
## Reductions:

State 5:
## Known stack suffix:
## FUN IDENT
## LR(1) items:
decl -> FUN IDENT . funbody [ SEMICOLON ]
## Transitions:
-- On LPAR shift to state 6
-- On funbody shift to state 134
## Reductions:

State 6:
## Known stack suffix:
## LPAR
## LR(1) items:
funbody -> LPAR . loption(separated_nonempty_list(COMMA,param)) RPAR option(annot) expr [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
-- On IDENT shift to state 7
-- On separated_nonempty_list(COMMA,param) shift to state 40
-- On param shift to state 41
-- On loption(separated_nonempty_list(COMMA,param)) shift to state 44
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,param)) ->

State 7:
## Known stack suffix:
## IDENT
## LR(1) items:
param -> IDENT . COLON kokatype [ RPAR COMMA ]
## Transitions:
-- On COLON shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## IDENT COLON
## LR(1) items:
param -> IDENT COLON . kokatype [ RPAR COMMA ]
## Transitions:
-- On LPAR shift to state 9
-- On IDENT shift to state 11
-- On kokatype shift to state 39
-- On atype shift to state 17
## Reductions:

State 9:
## Known stack suffix:
## LPAR
## LR(1) items:
atype -> LPAR . kokatype RPAR [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
atype -> LPAR . RPAR [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
kokatype -> LPAR . loption(separated_nonempty_list(COMMA,kokatype)) ARROW result [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
-- On RPAR shift to state 10
-- On LPAR shift to state 9
-- On IDENT shift to state 11
-- On separated_nonempty_list(COMMA,kokatype) shift to state 30
-- On loption(separated_nonempty_list(COMMA,kokatype)) shift to state 31
-- On kokatype shift to state 34
-- On atype shift to state 17
## Reductions:
-- On ARROW
--   reduce production loption(separated_nonempty_list(COMMA,kokatype)) ->

State 10:
## Known stack suffix:
## LPAR RPAR
## LR(1) items:
atype -> LPAR RPAR . [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
## Reductions:
-- On TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW
--   reduce production atype -> LPAR RPAR

State 11:
## Known stack suffix:
## IDENT
## LR(1) items:
atype -> IDENT . option(__anonymous_2) [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
-- On LPAR shift to state 12
-- On option(__anonymous_2) shift to state 29
## Reductions:
-- On TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW
--   reduce production option(__anonymous_2) ->
** Conflict on LPAR

State 12:
## Known stack suffix:
## LPAR
## LR(1) items:
option(__anonymous_2) -> LPAR . LHOOK kokatype RHOOK RPAR [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
-- On LHOOK shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## LPAR LHOOK
## LR(1) items:
option(__anonymous_2) -> LPAR LHOOK . kokatype RHOOK RPAR [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
-- On LPAR shift to state 9
-- On IDENT shift to state 11
-- On kokatype shift to state 14
-- On atype shift to state 17
## Reductions:

State 14:
## Known stack suffix:
## LPAR LHOOK kokatype
## LR(1) items:
option(__anonymous_2) -> LPAR LHOOK kokatype . RHOOK RPAR [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
-- On RHOOK shift to state 15
## Reductions:

State 15:
## Known stack suffix:
## LPAR LHOOK kokatype RHOOK
## LR(1) items:
option(__anonymous_2) -> LPAR LHOOK kokatype RHOOK . RPAR [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
-- On RPAR shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## LPAR LHOOK kokatype RHOOK RPAR
## LR(1) items:
option(__anonymous_2) -> LPAR LHOOK kokatype RHOOK RPAR . [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
## Reductions:
-- On TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW
--   reduce production option(__anonymous_2) -> LPAR LHOOK kokatype RHOOK RPAR

State 17:
## Known stack suffix:
## atype
## LR(1) items:
kokatype -> atype . [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
kokatype -> atype . ARROW result [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
-- On ARROW shift to state 18
## Reductions:
-- On TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW
--   reduce production kokatype -> atype
** Conflict on ARROW

State 18:
## Known stack suffix:
## atype ARROW
## LR(1) items:
kokatype -> atype ARROW . result [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
-- On LHOOK shift to state 19
-- On result shift to state 26
-- On option(__anonymous_1) shift to state 27
## Reductions:
-- On LPAR IDENT
--   reduce production option(__anonymous_1) ->

State 19:
## Known stack suffix:
## LHOOK
## LR(1) items:
option(__anonymous_1) -> LHOOK . loption(separated_nonempty_list(COMMA,IDENT)) RHOOK [ LPAR IDENT ]
## Transitions:
-- On IDENT shift to state 20
-- On separated_nonempty_list(COMMA,IDENT) shift to state 23
-- On loption(separated_nonempty_list(COMMA,IDENT)) shift to state 24
## Reductions:
-- On RHOOK
--   reduce production loption(separated_nonempty_list(COMMA,IDENT)) ->

State 20:
## Known stack suffix:
## IDENT
## LR(1) items:
separated_nonempty_list(COMMA,IDENT) -> IDENT . [ RHOOK ]
separated_nonempty_list(COMMA,IDENT) -> IDENT . COMMA separated_nonempty_list(COMMA,IDENT) [ RHOOK ]
## Transitions:
-- On COMMA shift to state 21
## Reductions:
-- On RHOOK
--   reduce production separated_nonempty_list(COMMA,IDENT) -> IDENT

State 21:
## Known stack suffix:
## IDENT COMMA
## LR(1) items:
separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA . separated_nonempty_list(COMMA,IDENT) [ RHOOK ]
## Transitions:
-- On IDENT shift to state 20
-- On separated_nonempty_list(COMMA,IDENT) shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## IDENT COMMA separated_nonempty_list(COMMA,IDENT)
## LR(1) items:
separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA separated_nonempty_list(COMMA,IDENT) . [ RHOOK ]
## Transitions:
## Reductions:
-- On RHOOK
--   reduce production separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA separated_nonempty_list(COMMA,IDENT)

State 23:
## Known stack suffix:
## separated_nonempty_list(COMMA,IDENT)
## LR(1) items:
loption(separated_nonempty_list(COMMA,IDENT)) -> separated_nonempty_list(COMMA,IDENT) . [ RHOOK ]
## Transitions:
## Reductions:
-- On RHOOK
--   reduce production loption(separated_nonempty_list(COMMA,IDENT)) -> separated_nonempty_list(COMMA,IDENT)

State 24:
## Known stack suffix:
## LHOOK loption(separated_nonempty_list(COMMA,IDENT))
## LR(1) items:
option(__anonymous_1) -> LHOOK loption(separated_nonempty_list(COMMA,IDENT)) . RHOOK [ LPAR IDENT ]
## Transitions:
-- On RHOOK shift to state 25
## Reductions:

State 25:
## Known stack suffix:
## LHOOK loption(separated_nonempty_list(COMMA,IDENT)) RHOOK
## LR(1) items:
option(__anonymous_1) -> LHOOK loption(separated_nonempty_list(COMMA,IDENT)) RHOOK . [ LPAR IDENT ]
## Transitions:
## Reductions:
-- On LPAR IDENT
--   reduce production option(__anonymous_1) -> LHOOK loption(separated_nonempty_list(COMMA,IDENT)) RHOOK

State 26:
## Known stack suffix:
## atype ARROW result
## LR(1) items:
kokatype -> atype ARROW result . [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
## Reductions:
-- On TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW
--   reduce production kokatype -> atype ARROW result

State 27:
## Known stack suffix:
## option(__anonymous_1)
## LR(1) items:
result -> option(__anonymous_1) . kokatype [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
-- On LPAR shift to state 9
-- On IDENT shift to state 11
-- On kokatype shift to state 28
-- On atype shift to state 17
## Reductions:

State 28:
## Known stack suffix:
## option(__anonymous_1) kokatype
## LR(1) items:
result -> option(__anonymous_1) kokatype . [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
## Reductions:
-- On TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW
--   reduce production result -> option(__anonymous_1) kokatype

State 29:
## Known stack suffix:
## IDENT option(__anonymous_2)
## LR(1) items:
atype -> IDENT option(__anonymous_2) . [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
## Reductions:
-- On TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW
--   reduce production atype -> IDENT option(__anonymous_2)

State 30:
## Known stack suffix:
## separated_nonempty_list(COMMA,kokatype)
## LR(1) items:
loption(separated_nonempty_list(COMMA,kokatype)) -> separated_nonempty_list(COMMA,kokatype) . [ ARROW ]
## Transitions:
## Reductions:
-- On ARROW
--   reduce production loption(separated_nonempty_list(COMMA,kokatype)) -> separated_nonempty_list(COMMA,kokatype)

State 31:
## Known stack suffix:
## LPAR loption(separated_nonempty_list(COMMA,kokatype))
## LR(1) items:
kokatype -> LPAR loption(separated_nonempty_list(COMMA,kokatype)) . ARROW result [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
-- On ARROW shift to state 32
## Reductions:

State 32:
## Known stack suffix:
## LPAR loption(separated_nonempty_list(COMMA,kokatype)) ARROW
## LR(1) items:
kokatype -> LPAR loption(separated_nonempty_list(COMMA,kokatype)) ARROW . result [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
-- On LHOOK shift to state 19
-- On result shift to state 33
-- On option(__anonymous_1) shift to state 27
## Reductions:
-- On LPAR IDENT
--   reduce production option(__anonymous_1) ->

State 33:
## Known stack suffix:
## LPAR loption(separated_nonempty_list(COMMA,kokatype)) ARROW result
## LR(1) items:
kokatype -> LPAR loption(separated_nonempty_list(COMMA,kokatype)) ARROW result . [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
## Reductions:
-- On TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW
--   reduce production kokatype -> LPAR loption(separated_nonempty_list(COMMA,kokatype)) ARROW result

State 34:
## Known stack suffix:
## LPAR kokatype
## LR(1) items:
atype -> LPAR kokatype . RPAR [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
separated_nonempty_list(COMMA,kokatype) -> kokatype . [ ARROW ]
separated_nonempty_list(COMMA,kokatype) -> kokatype . COMMA separated_nonempty_list(COMMA,kokatype) [ ARROW ]
## Transitions:
-- On RPAR shift to state 35
-- On COMMA shift to state 36
## Reductions:
-- On ARROW
--   reduce production separated_nonempty_list(COMMA,kokatype) -> kokatype

State 35:
## Known stack suffix:
## LPAR kokatype RPAR
## LR(1) items:
atype -> LPAR kokatype RPAR . [ TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW ]
## Transitions:
## Reductions:
-- On TRUE TILD STRING RPAR RHOOK RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM COMMA ARROW
--   reduce production atype -> LPAR kokatype RPAR

State 36:
## Known stack suffix:
## kokatype COMMA
## LR(1) items:
separated_nonempty_list(COMMA,kokatype) -> kokatype COMMA . separated_nonempty_list(COMMA,kokatype) [ ARROW ]
## Transitions:
-- On LPAR shift to state 9
-- On IDENT shift to state 11
-- On separated_nonempty_list(COMMA,kokatype) shift to state 37
-- On kokatype shift to state 38
-- On atype shift to state 17
## Reductions:

State 37:
## Known stack suffix:
## kokatype COMMA separated_nonempty_list(COMMA,kokatype)
## LR(1) items:
separated_nonempty_list(COMMA,kokatype) -> kokatype COMMA separated_nonempty_list(COMMA,kokatype) . [ ARROW ]
## Transitions:
## Reductions:
-- On ARROW
--   reduce production separated_nonempty_list(COMMA,kokatype) -> kokatype COMMA separated_nonempty_list(COMMA,kokatype)

State 38:
## Known stack suffix:
## kokatype
## LR(1) items:
separated_nonempty_list(COMMA,kokatype) -> kokatype . [ ARROW ]
separated_nonempty_list(COMMA,kokatype) -> kokatype . COMMA separated_nonempty_list(COMMA,kokatype) [ ARROW ]
## Transitions:
-- On COMMA shift to state 36
## Reductions:
-- On ARROW
--   reduce production separated_nonempty_list(COMMA,kokatype) -> kokatype

State 39:
## Known stack suffix:
## IDENT COLON kokatype
## LR(1) items:
param -> IDENT COLON kokatype . [ RPAR COMMA ]
## Transitions:
## Reductions:
-- On RPAR COMMA
--   reduce production param -> IDENT COLON kokatype

State 40:
## Known stack suffix:
## separated_nonempty_list(COMMA,param)
## LR(1) items:
loption(separated_nonempty_list(COMMA,param)) -> separated_nonempty_list(COMMA,param) . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,param)) -> separated_nonempty_list(COMMA,param)

State 41:
## Known stack suffix:
## param
## LR(1) items:
separated_nonempty_list(COMMA,param) -> param . [ RPAR ]
separated_nonempty_list(COMMA,param) -> param . COMMA separated_nonempty_list(COMMA,param) [ RPAR ]
## Transitions:
-- On COMMA shift to state 42
## Reductions:
-- On RPAR
--   reduce production separated_nonempty_list(COMMA,param) -> param

State 42:
## Known stack suffix:
## param COMMA
## LR(1) items:
separated_nonempty_list(COMMA,param) -> param COMMA . separated_nonempty_list(COMMA,param) [ RPAR ]
## Transitions:
-- On IDENT shift to state 7
-- On separated_nonempty_list(COMMA,param) shift to state 43
-- On param shift to state 41
## Reductions:

State 43:
## Known stack suffix:
## param COMMA separated_nonempty_list(COMMA,param)
## LR(1) items:
separated_nonempty_list(COMMA,param) -> param COMMA separated_nonempty_list(COMMA,param) . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production separated_nonempty_list(COMMA,param) -> param COMMA separated_nonempty_list(COMMA,param)

State 44:
## Known stack suffix:
## LPAR loption(separated_nonempty_list(COMMA,param))
## LR(1) items:
funbody -> LPAR loption(separated_nonempty_list(COMMA,param)) . RPAR option(annot) expr [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
-- On RPAR shift to state 45
## Reductions:

State 45:
## Known stack suffix:
## LPAR loption(separated_nonempty_list(COMMA,param)) RPAR
## LR(1) items:
funbody -> LPAR loption(separated_nonempty_list(COMMA,param)) RPAR . option(annot) expr [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
-- On COLON shift to state 46
-- On option(annot) shift to state 48
-- On annot shift to state 133
## Reductions:
-- On TRUE TILD STRING RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM
--   reduce production option(annot) ->

State 46:
## Known stack suffix:
## COLON
## LR(1) items:
annot -> COLON . result [ TRUE TILD STRING RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM ]
## Transitions:
-- On LHOOK shift to state 19
-- On result shift to state 47
-- On option(__anonymous_1) shift to state 27
## Reductions:
-- On LPAR IDENT
--   reduce production option(__anonymous_1) ->

State 47:
## Known stack suffix:
## COLON result
## LR(1) items:
annot -> COLON result . [ TRUE TILD STRING RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM ]
## Transitions:
## Reductions:
-- On TRUE TILD STRING RETURN LSPAR LPAR LBRAC INT IF IDENT FN FALSE EXCLAM
--   reduce production annot -> COLON result

State 48:
## Known stack suffix:
## LPAR loption(separated_nonempty_list(COMMA,param)) RPAR option(annot)
## LR(1) items:
funbody -> LPAR loption(separated_nonempty_list(COMMA,param)) RPAR option(annot) . expr [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
-- On TRUE shift to state 49
-- On TILD shift to state 50
-- On STRING shift to state 51
-- On RETURN shift to state 52
-- On LSPAR shift to state 53
-- On LPAR shift to state 54
-- On LBRAC shift to state 56
-- On INT shift to state 61
-- On IF shift to state 62
-- On IDENT shift to state 63
-- On FN shift to state 64
-- On FALSE shift to state 66
-- On EXCLAM shift to state 67
-- On expr shift to state 132
-- On block shift to state 93
-- On bexpr shift to state 94
-- On atom shift to state 85
## Reductions:

State 49:
## Known stack suffix:
## TRUE
## LR(1) items:
atom -> TRUE . [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
## Reductions:
-- On THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND
--   reduce production atom -> TRUE

State 50:
## Known stack suffix:
## TILD
## LR(1) items:
bexpr -> TILD . bexpr [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
-- On TRUE shift to state 49
-- On TILD shift to state 50
-- On STRING shift to state 51
-- On RETURN shift to state 52
-- On LSPAR shift to state 53
-- On LPAR shift to state 54
-- On INT shift to state 61
-- On IF shift to state 62
-- On IDENT shift to state 63
-- On FN shift to state 64
-- On FALSE shift to state 66
-- On EXCLAM shift to state 67
-- On bexpr shift to state 131
-- On atom shift to state 85
## Reductions:

State 51:
## Known stack suffix:
## STRING
## LR(1) items:
atom -> STRING . [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
## Reductions:
-- On THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND
--   reduce production atom -> STRING

State 52:
## Known stack suffix:
## RETURN
## LR(1) items:
bexpr -> RETURN . expr [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
-- On TRUE shift to state 49
-- On TILD shift to state 50
-- On STRING shift to state 51
-- On RETURN shift to state 52
-- On LSPAR shift to state 53
-- On LPAR shift to state 54
-- On LBRAC shift to state 56
-- On INT shift to state 61
-- On IF shift to state 62
-- On IDENT shift to state 63
-- On FN shift to state 64
-- On FALSE shift to state 66
-- On EXCLAM shift to state 67
-- On expr shift to state 130
-- On block shift to state 93
-- On bexpr shift to state 94
-- On atom shift to state 85
## Reductions:

State 53:
## Known stack suffix:
## LSPAR
## LR(1) items:
atom -> LSPAR . loption(separated_nonempty_list(COMMA,expr)) RSPAR [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
-- On TRUE shift to state 49
-- On TILD shift to state 50
-- On STRING shift to state 51
-- On RETURN shift to state 52
-- On LSPAR shift to state 53
-- On LPAR shift to state 54
-- On LBRAC shift to state 56
-- On INT shift to state 61
-- On IF shift to state 62
-- On IDENT shift to state 63
-- On FN shift to state 64
-- On FALSE shift to state 66
-- On EXCLAM shift to state 67
-- On separated_nonempty_list(COMMA,expr) shift to state 87
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 128
-- On expr shift to state 90
-- On block shift to state 93
-- On bexpr shift to state 94
-- On atom shift to state 85
## Reductions:
-- On RSPAR
--   reduce production loption(separated_nonempty_list(COMMA,expr)) ->

State 54:
## Known stack suffix:
## LPAR
## LR(1) items:
atom -> LPAR . RPAR [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
atom -> LPAR . expr RPAR [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
-- On TRUE shift to state 49
-- On TILD shift to state 50
-- On STRING shift to state 51
-- On RPAR shift to state 55
-- On RETURN shift to state 52
-- On LSPAR shift to state 53
-- On LPAR shift to state 54
-- On LBRAC shift to state 56
-- On INT shift to state 61
-- On IF shift to state 62
-- On IDENT shift to state 63
-- On FN shift to state 64
-- On FALSE shift to state 66
-- On EXCLAM shift to state 67
-- On expr shift to state 126
-- On block shift to state 93
-- On bexpr shift to state 94
-- On atom shift to state 85
## Reductions:

State 55:
## Known stack suffix:
## LPAR RPAR
## LR(1) items:
atom -> LPAR RPAR . [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
## Reductions:
-- On THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND
--   reduce production atom -> LPAR RPAR

State 56:
## Known stack suffix:
## LBRAC
## LR(1) items:
block -> LBRAC . list(SEMICOLON) list(__anonymous_4) RBRAC [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
-- On SEMICOLON shift to state 1
-- On list(SEMICOLON) shift to state 57
## Reductions:
-- On VAR VAL TRUE TILD STRING RETURN RBRAC LSPAR LPAR INT IF IDENT FN FALSE EXCLAM
--   reduce production list(SEMICOLON) ->

State 57:
## Known stack suffix:
## LBRAC list(SEMICOLON)
## LR(1) items:
block -> LBRAC list(SEMICOLON) . list(__anonymous_4) RBRAC [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
-- On VAR shift to state 58
-- On VAL shift to state 114
-- On TRUE shift to state 49
-- On TILD shift to state 50
-- On STRING shift to state 51
-- On RETURN shift to state 52
-- On LSPAR shift to state 53
-- On LPAR shift to state 54
-- On INT shift to state 61
-- On IF shift to state 62
-- On IDENT shift to state 63
-- On FN shift to state 64
-- On FALSE shift to state 66
-- On EXCLAM shift to state 67
-- On stmt shift to state 118
-- On list(__anonymous_4) shift to state 124
-- On bexpr shift to state 123
-- On atom shift to state 85
## Reductions:
-- On RBRAC
--   reduce production list(__anonymous_4) ->

State 58:
## Known stack suffix:
## VAR
## LR(1) items:
stmt -> VAR . IDENT ASSIGN expr [ SEMICOLON ]
## Transitions:
-- On IDENT shift to state 59
## Reductions:

State 59:
## Known stack suffix:
## VAR IDENT
## LR(1) items:
stmt -> VAR IDENT . ASSIGN expr [ SEMICOLON ]
## Transitions:
-- On ASSIGN shift to state 60
## Reductions:

State 60:
## Known stack suffix:
## VAR IDENT ASSIGN
## LR(1) items:
stmt -> VAR IDENT ASSIGN . expr [ SEMICOLON ]
## Transitions:
-- On TRUE shift to state 49
-- On TILD shift to state 50
-- On STRING shift to state 51
-- On RETURN shift to state 52
-- On LSPAR shift to state 53
-- On LPAR shift to state 54
-- On LBRAC shift to state 56
-- On INT shift to state 61
-- On IF shift to state 62
-- On IDENT shift to state 63
-- On FN shift to state 64
-- On FALSE shift to state 66
-- On EXCLAM shift to state 67
-- On expr shift to state 113
-- On block shift to state 93
-- On bexpr shift to state 94
-- On atom shift to state 85
## Reductions:

State 61:
## Known stack suffix:
## INT
## LR(1) items:
atom -> INT . [ THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND ]
## Transitions:
## Reductions:
-- On THEN SEMICOLON RSPAR RPAR RETURN PLUS OR NEQ MUL MOD MINUS LTE LT LPAR LBRAC GTE GT FN EQ ELSE ELIF DOT DIV CONCAT COMMA AND
--   reduce production atom -> INT
